feat(api): more OpenAPI documentation
